src/components/Modal.module.scss
.modalWrap {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.3);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 200;
    display: flex;
    justify-content: center;
    align-items: center;
}

@keyframes wrapOpen {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}
@keyframes wrapClose {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}

.modalWrap--open {
    animation: wrapOpen 0.1s cubic-bezier(0, 0, 0.15, 1);
    animation-fill-mode: forwards;
}
.modalWrap--closed {
    animation: wrapClose 0.1s cubic-bezier(0, 0, 0.15, 1);
    animation-fill-mode: forwards;
}

@keyframes modalOpen {
    from {
        transform: scale(1.4);
        opacity: 0;
    }
    to {
        transform: scale(1);
        opacity: 1;
    }
}

.modal {
    width: auto;
    height: max-content;
    padding: 0.6rem 0.6rem;
    box-sizing: border-box;
    background-color: white;
    border-radius: var(--border-radius-extra-large);
    box-shadow: var(--box-shadow-widget);

    & > div:first-of-type {
        width: 100%;
        height: 2rem;
        display: flex;
        justify-content: space-between;
        align-items: center;

        & > *:first-of-type,
        & > *:last-of-type {
            width: 2rem;
            height: 2rem;
        }
        & > button {
            cursor: pointer;
            border-radius: 50%;
            transition: var(--transition-background-color);
            &:hover {
                background-color: var(--color-background-button-secondary-hover);
            }
            & > svg {
                width: 80%;
                height: 80%;
                color: #333;
            }
        }

        & > div:nth-of-type(2) {
            width: max-content;
            font-size: 1.4rem;
            text-align: baseline;
            user-select: none;
        }
    }

    & > div:nth-of-type(2) {
        margin: 2rem 0;
        font-size: 1.5rem;
        padding: 0 1rem;
    }

    & > div:last-of-type {
        width: 100%;
        display: flex;
        justify-content: flex-end;
        align-items: center;
    }
}

.modal--open {
    animation: modalOpen 0.15s cubic-bezier(0, 1, 0, 1);
}
.modal--closed {
    transform: scale(0.3);
    transition: transform 0.15s cubic-bezier(0, 1, 0, 1);
}

.modal--unstyled {
    padding: 0;
    background: none;
}

.button:not(:last-of-type) {
    margin-right: 1rem;
}

